[package]
name = "distri-js-sandbox"
version = "0.1.1"
edition = "2021"

[dependencies]
rustyscript = { git = "https://github.com/rscarson/rustyscript.git", version = "0.12.3", default-features = false, features = [
  "worker",
] }
tokio = { version = "^1.39.0", features = ["full"] }
anyhow = "1.0"
deno_core = "0.340.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "^2.0.3"
[lib]
name = "distri_js_sandbox"
